Fix project card gap

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -10,6 +10,7 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
+	gap: 50px;
 }
 
 .profil {
