--- a/app/projects/Projects.module.css
+++ b/app/projects/Projects.module.css
@@ -13,7 +13,7 @@
 }
 .projects {
 	display: flex;
-	justify-content: space-evenly;
-
+	justify-content: center;
+	gap: 50px;
 	flex-wrap: wrap;
 }
